[package]
authors = ["Gestalt LUR <gestapolur@gmail.com>"]
name = "ali-ecs-ctl"
version = "1.3.0"

[dependencies]
base64 = "0.5"
chrono = "0.3"
clap = "2.22"
error-chain = "0.10"
hmac-sha1 = "0.1"
hyper = "0.10"
num_cpus = "1.3"
reqwest = "0.6"
scoped-pool = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
statsd = "0.8.0"
url = "1.4"

[dependencies.prettytable-rs]
default-features = false
features = ["win_crlf"]
version = "0.6"

[dependencies.uuid]
features = ["v4"]
version = "0.5"

[features]
unstable = []
