[package]
authors = ["Gestalt LUR <gestalt.lur@gmail.com>"]
name = "ali-ecs-ctl"
version = "1.5.1"

[dependencies]
base64 = "0.7"
chrono = "0.4"
clap = "2.22"
error-chain = "0.11"
hmac-sha1 = "0.1"
num_cpus = "1.3"
reqwest = "0.7"
scoped-pool = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
statsd = "0.10"
url = "1.4"

[dependencies.prettytable-rs]
default-features = false
features = ["win_crlf"]
version = "0.6"

[dependencies.uuid]
features = ["v4"]
version = "0.5"

[features]
unstable = []
