[package]
authors = ["Gestalt LUR <gestalt.lur@gmail.com>"]
name = "ali-ecs-ctl"
version = "1.6.0"

[dependencies]
base64 = "0.9"
chrono = "0.4"
clap = "2.22"
hmac-sha1 = "0.1"
num_cpus = "1.3"
reqwest = "0.8"
scoped-pool = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
statsd = "0.10"
url = "1.4"
failure = "0.1"
failure_derive = "0.1"

[dependencies.prettytable-rs]
default-features = false
features = ["win_crlf"]
version = "0.6"

[dependencies.uuid]
features = ["v4"]
version = "0.6"

[features]
unstable = []
